# libconic

./: .gitignore  Makefile.am  configure.ac  conic.pc.in  doxygen.cfg.in
conic/: Makefile.am  conic.h  conicconnection.c  conicconnection.h  conicconnectionevent-private.h  conicconnectionevent.c  conicconnectionevent.h  conicevent-private.h  conicevent.c  conicevent.h  coniciap-private.h  coniciap.c  coniciap.h  conicstatisticsevent-private.h  conicstatisticsevent.c  conicstatisticsevent.h
debian/: README  changelog  control  copyright  rules  shlibs.local.ex
tests/: Makefile.am  test-automatic-events.c  test-connect.c  test-destruction-at-callback.c  test-disconnect.c  test-iap.c  test-proxies.c  test-statistics.c  test-two-objects.c
